relax merkle paths order
Signed-off-by: Xin Li <xin@hashgraph.com>